# voice_cmd_manager

./: CMakeLists.txt
sources/: CMakeLists.txt  main.cpp
sources/common/: types.cpp  types.h
sources/fsm/: major_fsm.cpp  major_fsm.h  utils_fsm.h
sources/modules/audio/: audio_mgr.cpp  audio_mgr.h
sources/modules/dbus/: dbus_server.cpp  dbus_server.h
sources/modules/intents/: intent_manager.cpp  intent_manager.h
